# monkey_interpreter

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md  flake.nix  release-please-config.json
.github/workflows/: claude-code-review.yml  continuous-delivery.yml  continuous-integration.yml  conventional-commits.yml  git-history.yml  github-actions-workflows.yml  release-please.yml
ci/: publish-binary.sh
src/: main.rs
src/cli/: mod.rs
src/evaluator/: macros.rs  mod.rs  tests.rs
src/evaluator/boolean/: mod.rs  tests.rs
src/evaluator/evaluator_context/: mod.rs
src/evaluator/expression/: mod.rs
src/evaluator/if_statement/: mod.rs  tests.rs
src/evaluator/infix/: mod.rs  tests.rs
src/evaluator/integer/: mod.rs  tests.rs
src/evaluator/model/: mod.rs
src/evaluator/object/: mod.rs
src/evaluator/prefix/: mod.rs  tests.rs
src/evaluator/return_statement/: mod.rs  tests.rs
src/evaluator/snapshots/: rust_monkey_interpreter__evaluator__tests__test_evaluator_boolean_nodes_case2.snap  rust_monkey_interpreter__evaluator__tests__test_evaluator_input_edgecases_case1.snap  rust_monkey_interpreter__evaluator__tests__test_evaluator_integer_nodes_case1.snap
src/evaluator/statement/: mod.rs
src/evaluator/tests/: macros.rs  mod.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/lexical_analysis/: macros.rs  mod.rs  tests.rs
src/lexical_analysis/model/: mod.rs
src/lexical_analysis/snapshots/: rust_monkey_interpreter__lexical_analysis__tests__test_empty_code.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case1.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case2.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case3.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case4.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_integers_case1.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case1.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case2.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case3.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case4.snap  rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case5.snap  (+9 more)
src/repl/: mod.rs
src/syntax_analysis/: macros.rs  mod.rs  tests.rs
src/tests/: macros.rs  mod.rs
src/token/: mod.rs
src/utilities/: mod.rs
(+962 files in other folders)
