[package]
name = "monkey_interpreter"
version = "0.16.0"
description = "Implementation of an interpreter for the Monkey language written in Rust, currently under active development."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/monkey_interpreter"
readme = "README.md"
keywords = ["monkey", "interpreter", "compiler", "programming", "language"]
categories = ["command-line-utilities", "development-tools", "compilers", "text-processing", "parser-implementations"]


[dependencies]
# For logging.
log = "0.4.17"
pretty_env_logger = "0.4.0"

# For custom errors.
thiserror = "1.0.37"


[dev-dependencies]
# For parameterised testing.
rstest = "0.16.0"
rstest_reuse = "0.4.0"

# For snapshot testing.
insta = "1.22.0"


[profile.release]
lto = 'fat'
codegen-units = 1
