[package]
name = "monkey_interpreter"
version = "0.16.1"
description = "Implementation of an interpreter for the Monkey language written in Rust, currently under active development."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/monkey_interpreter"
readme = "README.md"
keywords = ["monkey", "interpreter", "compiler", "programming", "language"]
categories = ["command-line-utilities", "development-tools", "compilers", "text-processing", "parser-implementations"]


[dependencies]
# For logging.
log = "0.4.21"
pretty_env_logger = "0.5.0"

# For CLI argument parsing.
clap = { version = "4.5.0", features = ["derive"] }

# For custom errors.
thiserror = "2.0.0"

# For error handling.
anyhow = "1.0.89"


[dev-dependencies]
# For parameterised testing.
rstest = "=0.26.1"
rstest_reuse = "=0.7.0"

# For snapshot testing.
insta = "=1.44.3"


[profile.release]
lto = 'fat'
codegen-units = 1
